k8s-istio/manifests/istio/routing-advanced/canary-deployment/serviceb-virtual-service-v2-safari.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b-vs
spec:
  hosts:
  - serviceb
  http:
    - match:
      - headers:
          user-agent:
            regex: .*Safari.*
      route:
      - destination:
          host: serviceb
          subset: v2
        weight: 80
    - route:
      - destination:
          host: serviceb
          subset: v1
        weight: 20
